# MALD

./: .gitignore  CHANGELOG.md  Makefile  README.md  demo.md  pyproject.toml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  INSTALL.md  PKM.md
iso/: build.sh
mald/: __init__.py  __main__.py  cli.py
mald/commands/: __init__.py  ai.py  config.py  execute.py  init.py  iso.py  kb.py  session.py
mald/executor/: __init__.py  cell_parser.py  code_executor.py
mald/rag/: __init__.py  embeddings.py  rag_engine.py  vector_store.py
mald/utils/: __init__.py  config_manager.py  filesystem.py  markdown_parser.py
scripts/: install.sh
tests/: conftest.py  test_cli.py  test_markdown.py
